--- a/test.html
+++ b/test.html
@@ -3,133 +3,199 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ブログ詳細 | 合同会社WaJu</title>
-  <meta name="description" content="合同会社WaJuのブログ詳細ページです。介護・福祉業界を支えるCARELAYの情報や最新記事をご覧いただけます。">
+  <title>ブログ一覧 | 合同会社WaJu</title>
+
+  <!-- SEO -->
+  <meta name="description" content="CARELAYや介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
+  <meta property="og:title" content="ブログ一覧 | 合同会社WaJu">
+  <meta property="og:description" content="CARELAYや介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0006.png">
+  <meta property="og:url" content="https://waju.co.jp/blog/">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png">
+
+  <!-- TailwindCSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind Config for Inter font and custom colors (Home Pageと共通) -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+          },
+          colors: {
+            'waju-primary': '#1e40af', // Blue-700 equivalent
+            'waju-light': '#eff6ff',   // Blue-50 equivalent
+            'waju-accent': '#f59e0b',  // Amber-500
+          }
+        }
+      }
+    }
+  </script>
 
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R49H9DTN70"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-R49H9DTN70');
   </script>
-
-  <style>
-    body{font-family:"Noto Sans JP",sans-serif;margin:0;padding:0;background:#f8f9fa;}
-    main{max-width:900px;margin:80px auto;padding:20px;}
-    h1{font-size:1.8rem;margin-bottom:10px;}
-    .meta{color:#555;font-size:0.9rem;margin-bottom:20px;}
-    .thumbnail{width:100px;height:100px;object-fit:cover;border-radius:6px;margin-bottom:10px;}
-    .content{background:#fff;border:1px solid #ddd;border-radius:8px;padding:20px;margin:20px 0;}
-    .tags{margin-top:15px;}
-    .tag{display:inline-block;background:#e9ecef;color:#333;padding:4px 10px;border-radius:12px;font-size:0.8rem;margin-right:6px;}
-    .nav-links{display:flex;justify-content:space-between;align-items:center;margin:20px 0;}
-    .nav-btn{display:flex;align-items:center;gap:6px;background:#0d6efd;color:#fff;padding:8px 14px;border-radius:20px;text-decoration:none;font-size:0.9rem;}
-    .nav-btn:hover{opacity:0.8;}
-    .share{margin:20px 0;display:flex;align-items:center;gap:10px;}
-    .share span{font-size:0.9rem;}
-    .share a{width:36px;height:36px;display:flex;align-items:center;justify-content:center;border-radius:50%;color:#fff;text-decoration:none;font-size:1rem;}
-    .x{background:#000;}
-    .fb{background:#1877f2;}
-    .line{background:#06c755;}
-    .ig{background:#e1306c;}
-    .mail{background:#fbbc05;color:#000;}
-  </style>
 </head>
-<body>
+<body id="page-body" class="font-sans bg-gray-50">
   <header id="site-header"></header>
 
   <main id="page-main">
-    <div class="nav-links top-nav">
-      <a href="#" id="prevArticle" class="nav-btn">⬅ 前の記事</a>
-      <a href="/blog/" class="nav-btn">🏠 一覧に戻る</a>
-      <a href="#" id="nextArticle" class="nav-btn">次の記事 ➡</a>
-    </div>
+    <section class="max-w-6xl mx-auto px-6 py-16">
+      <!-- 見出しを「ブログ一覧」に戻し、スタイルを統一 -->
+      <h1 class="text-4xl font-extrabold text-center mb-12 text-waju-primary relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">ブログ一覧</h1>
 
-    <img id="thumbnail" class="thumbnail" alt="サムネイル">
-    <h1 id="title"></h1>
-    <div class="meta">
-      <span id="category"></span> | <span id="date"></span>
-    </div>
-    <div id="content" class="content"></div>
+      <!-- カテゴリフィルタと検索 -->
+      <!-- 横幅をw-fit max-w-fullにして、コンテンツ幅に制限 -->
+      <div class="flex flex-col sm:flex-row justify-between items-center gap-4 mb-10 p-4 bg-white rounded-xl shadow-lg w-fit max-w-full mx-auto">
+        <div class="text-lg font-semibold text-gray-700 flex-shrink-0">
+            カテゴリで絞り込む:
+        </div>
+        <select id="categoryFilter" class="border border-gray-300 rounded-lg px-4 py-2 w-48 focus:ring-waju-primary focus:border-waju-primary transition duration-150">
+          <option value="">すべてのカテゴリ</option>
+          <!-- カテゴリはJSで挿入されます -->
+        </select>
+      </div>
 
-    <div class="tags" id="tags"></div>
+      <!-- 記事一覧 (リスト形式を維持しつつ、カードスタイルを適用) -->
+      <div id="articles" class="flex flex-col gap-6">
+        <!-- 記事はJSで挿入されます -->
+      </div>
 
-    <div class="share">
-      <span>シェアする：</span>
-      <a id="shareX" class="x" target="_blank">X</a>
-      <a id="shareFb" class="fb" target="_blank">f</a>
-      <a id="shareLine" class="line" target="_blank">L</a>
-      <a id="shareIg" class="ig" target="_blank">IG</a>
-      <a id="shareMail" class="mail" target="_blank">@</a>
-    </div>
-
-    <div class="nav-links bottom-nav">
-      <a href="#" id="prevArticle2" class="nav-btn">⬅ 前の記事</a>
-      <a href="/blog/" class="nav-btn">🏠 一覧に戻る</a>
-      <a href="#" id="nextArticle2" class="nav-btn">次の記事 ➡</a>
-    </div>
+      <!-- ページネーション -->
+      <div class="flex justify-center items-center gap-4 mt-12">
+        <button id="prevBtn" class="flex items-center space-x-2 px-6 py-2 bg-white text-waju-primary font-bold rounded-full shadow-md hover:bg-waju-light disabled:opacity-50 disabled:cursor-not-allowed transition duration-150">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+            </svg>
+            <span>前へ</span>
+        </button>
+        <span id="pageInfo" class="text-xl font-bold text-gray-700">1 / 1</span>
+        <button id="nextBtn" class="flex items-center space-x-2 px-6 py-2 bg-white text-waju-primary font-bold rounded-full shadow-md hover:bg-waju-light disabled:opacity-50 disabled:cursor-not-allowed transition duration-150">
+            <span>次へ</span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+            </svg>
+        </button>
+      </div>
+    </section>
   </main>
 
   <footer id="site-footer"></footer>
+  <script type="module" src="/hf.js"></script>
 
   <script type="module">
+    // Supabaseのクライアント設定（変更なし）
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-
-    const supabase = createClient(
+    const sb = createClient(
       "https://htnmjsqgoapvuanrsuma.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0"
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
     );
 
-    const params = new URLSearchParams(window.location.search);
-    const slug = params.get("slug");
+    const $ = s => document.querySelector(s);
+    const articlesEl = $("#articles");
+    const categoryFilter = $("#categoryFilter");
+    const pageInfo = $("#pageInfo");
+    const prevBtn = $("#prevBtn");
+    const nextBtn = $("#nextBtn");
 
-    async function loadArticle(){
-      const { data, error } = await supabase.from("articles").select("*").eq("slug", slug).single();
-      if(error){ console.error(error); return; }
-      if(!data){ return; }
+    let currentPage = 1;
+    const pageSize = 9; 
+    let currentCategory = "";
 
-      document.getElementById("title").textContent = data.title;
-      document.getElementById("date").textContent = new Date(data.created_at).toLocaleDateString();
-      document.getElementById("category").textContent = data.category || "";
-      document.getElementById("content").innerHTML = data.content;
-      const thumb = document.getElementById("thumbnail");
-      if(data.thumbnail_url){ thumb.src = data.thumbnail_url; }
-
-      const tagsDiv = document.getElementById("tags");
-      if(data.tags && data.tags.length>0){
-        tagsDiv.innerHTML = data.tags.map(t=>`<span class="tag">${t}</span>`).join("");
-      }
-
-      const url = window.location.href;
-      document.getElementById("shareX").href = "https://twitter.com/share?url="+encodeURIComponent(url);
-      document.getElementById("shareFb").href = "https://www.facebook.com/sharer/sharer.php?u="+encodeURIComponent(url);
-      document.getElementById("shareLine").href = "https://social-plugins.line.me/lineit/share?url="+encodeURIComponent(url);
-      document.getElementById("shareIg").href = "https://www.instagram.com/"; // Instagramは直接シェア不可
-      document.getElementById("shareMail").href = "mailto:?subject="+encodeURIComponent(data.title)+"&body="+encodeURIComponent(url);
-
-      // 前後記事リンク
-      const { data: allArticles } = await supabase.from("articles").select("id, slug, title, created_at").order("created_at",{ascending:false});
-      const idx = allArticles.findIndex(a => a.slug===slug);
-      if(idx>0){
-        const prev = allArticles[idx-1];
-        document.getElementById("prevArticle").href = "/blog-detail.html?slug="+prev.slug;
-        document.getElementById("prevArticle2").href = "/blog-detail.html?slug="+prev.slug;
-      } else {
-        document.getElementById("prevArticle").style.visibility="hidden";
-        document.getElementById("prevArticle2").style.visibility="hidden";
-      }
-      if(idx<allArticles.length-1){
-        const next = allArticles[idx+1];
-        document.getElementById("nextArticle").href = "/blog-detail.html?slug="+next.slug;
-        document.getElementById("nextArticle2").href = "/blog-detail.html?slug="+next.slug;
-      } else {
-        document.getElementById("nextArticle").style.visibility="hidden";
-        document.getElementById("nextArticle2").style.visibility="hidden";
-      }
+    // カテゴリ読み込み関数（変更なし）
+    async function loadCategories() {
+      const { data, error } = await sb.from("articles").select("category");
+      if (error) return console.error(error);
+      const categories = [...new Set(data.map(a => a.category).filter(c => c))];
+      categoryFilter.innerHTML = '<option value="">すべてのカテゴリ</option>' +
+        categories.map(c => `<option value="${c}">${c}</option>`).join("");
     }
-    loadArticle();
+
+    // 記事読み込みとレンダリング関数 (リスト形式のカードデザインに刷新)
+    async function loadArticles() {
+      // クエリ構築（変更なし）
+      let query = sb.from("articles")
+        .select("*", { count: "exact" })
+        .eq("published", true)
+        .order("created_at", { ascending: false })
+        .range((currentPage-1)*pageSize, currentPage*pageSize - 1);
+
+      if (currentCategory) query = query.eq("category", currentCategory);
+
+      const { data, count, error } = await query;
+      if (error) return console.error(error);
+
+      // 記事のHTMLレンダリング部分をリスト形式のカードデザインに刷新
+      articlesEl.innerHTML = data.map(a => {
+        const date = new Date(a.created_at).toLocaleDateString('ja-JP');
+        const description = a.description || (a.content ? a.content.replace(/<[^>]+>/g,"").substring(0, 100) + "…" : "詳細を見る"); 
+        const thumbnailUrl = a.thumbnail_url || 'https://placehold.co/150x150/1e40af/ffffff?text=BLOG'; 
+
+        return `
+          <a href="/blog-detail.html?slug=${a.slug}" class="block p-4 bg-white rounded-xl shadow-lg hover:shadow-xl hover:ring-2 hover:ring-waju-primary transition duration-300 group">
+            <div class="flex flex-col sm:flex-row gap-4 items-start">
+              <!-- サムネイル（左側） - 正方形、画像をcontainで表示、余白をbg-gray-200で埋める -->
+              <!-- w-28 と aspect-square で幅と高さを固定し、flex-shrink-0でサイズを維持 -->
+              <div class="flex-shrink-0 w-full sm:w-28 aspect-square overflow-hidden rounded-lg bg-gray-200">
+                <img src="${thumbnailUrl}" alt="${a.title}" 
+                     class="w-full h-full object-contain transition duration-300 group-hover:scale-105"
+                     onerror="this.onerror=null; this.src='https://placehold.co/112x112/1e40af/ffffff?text=WaJu+Blog';">
+              </div>
+              
+              <!-- 詳細情報（右側） -->
+              <div class="flex-1 min-w-0">
+                <div class="flex justify-between items-center mb-1">
+                    <!-- カテゴリタグ -->
+                    <span class="inline-block bg-waju-light text-waju-primary text-xs font-semibold px-3 py-1 rounded-full uppercase tracking-wider">${a.category || "コラム"}</span>
+                    <!-- 公開日 -->
+                    <span class="text-sm text-gray-500 flex-shrink-0">公開日: ${date}</span>
+                </div>
+                <!-- タイトル -->
+                <h2 class="text-xl font-bold text-gray-800 mb-2 group-hover:text-waju-accent transition duration-150 line-clamp-2">
+                  ${a.title}
+                </h2>
+                <!-- 概要 -->
+                <p class="text-gray-600 text-sm line-clamp-2">
+                  ${description}
+                </p>
+              </div>
+            </div>
+          </a>
+        `;
+      }).join("");
+
+      // ページネーションロジック（変更なし）
+      const totalPages = Math.ceil(count / pageSize);
+      pageInfo.textContent = `${currentPage} / ${totalPages || 1}`;
+      prevBtn.disabled = currentPage <= 1;
+      nextBtn.disabled = currentPage >= totalPages;
+    }
+
+    // イベントリスナー（変更なし）
+    categoryFilter.addEventListener("change", () => {
+      currentCategory = categoryFilter.value;
+      currentPage = 1;
+      loadArticles();
+    });
+    prevBtn.addEventListener("click", () => { if (currentPage > 1) { currentPage--; loadArticles(); } });
+    nextBtn.addEventListener("click", () => { currentPage++; loadArticles(); });
+
+    // 初期実行
+    window.onload = function() {
+        loadCategories();
+        loadArticles();
+    }
   </script>
 </body>
 </html>
